# mull-xctest

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
Formula/: mull-xctest.rb
benchmarks/: Makefile  muter.conf.json
benchmarks/scripts/: Package.swift  muter.sh  time.sh
benchmarks/scripts/Sources/Parser/: Entity.swift  Parser.swift
benchmarks/scripts/Sources/diff/: main.swift
cmake/: packaging
cmake/modules/: FindSwiftSyntaxParser.cmake  InstallSymlink.cmake  SwiftSyntax.cmake  mull.cmake  version.cmake
include/: mull  mull-c
include/MullXCTest/: MutantMetadata.h  MutantSerialization.h  MutationPipeline.h  PthreadTaskExecutor.h  Version.h  XCResultFile.h  XCTestRunFile.h
include/MullXCTest/SwiftSupport/: RuntimeFunctionFilter.h  SourceStorage.h  SwiftSyntaxMutationFilter.h  SyntaxMutationFilter.h  SyntaxMutationFinder.h
include/MullXCTest/Tasks/: EmbedMutantInfoTask.h  ExtractEmbeddedFileTask.h  ExtractRawEmbeddedFileFromBinary.h  LoadBitcodeFromBufferTask.h
lib/: CMakeLists.txt  MutantExtractor.cpp  MutantExtractor.h  MutantMetadata.cpp  MutantSerialization.cpp  MutationPipeline.cpp  Version.cpp  XCResultFile.cpp  XCTestRunFile.cpp
lib/SwiftFilters/: CMakeLists.txt  SwiftASTMutationFilter.cpp  SwiftASTMutationFilter.swift  SwiftRawSyntax.h
lib/SwiftFilters/core/: CMakeLists.txt  SwiftASTMutationFilter.swift
lib/SwiftSupport/: CMakeLists.txt  RuntimeFunctionFilter.cpp  SourceStorage.cpp  SwiftSyntaxMutationFilter.cpp  SyntaxMutationFilter.cpp  SyntaxMutationFinder.cpp
lib/SwiftSupport/core/: CMakeLists.txt  SwiftASTMutationFilter.swift
lib/Tasks/: EmbedMutantInfoTask.cpp  ExtractEmbeddedFileTask.cpp  ExtractRawEmbeddedFileFromBinary.cpp  LoadBitcodeFromBufferTask.cpp
tests/: CMakeLists.txt  lit.cfg  lit.cfg.in
tests/Inputs/Project/DynamicFramework/: DynamicFramework.h  Library.swift
tests/Inputs/Project/DynamicFrameworkTests/: DynamicFrameworkTests.swift
tests/Inputs/Project/Project.xcodeproj/: project.pbxproj
tests/Inputs/Project/Project.xcodeproj/xcshareddata/xcschemes/: DynamicFramework.xcscheme  MultiTargets.xcscheme  StaticFramework.xcscheme
tests/Inputs/Project/StaticFrameworkTests/: StaticFrameworkTests.swift
tests/dump-tool/: simple_test.ll
tests/mull-ld/embedd-info/: main.c
tests/mull-ld/simple-test/: main.c  main.cpp
tests/simple-link/: main.c
tests/swift-filters/: try.swift
tests/swift-support/: add_sub.swift  arithmetic.swift  assignment.swift  boundary.swift  comparison.swift  comparison_eq.swift  logical.swift  remove_void_call.swift  try.swift
tests/xcodebuild-pipeline/: multi-targets.swift  no-mutant.swift  simple-build.swift  static-lib.swift
tests/xctest-harness/: bundle.m
tests/xctest-objc-harness/: bundle.m
tests/xctest-swift-harness/: bundle.swift
tools/: CMakeLists.txt
tools/mull-dump-mutants/: CMakeLists.txt  mull-dump-mutants.cpp
tools/mull-ld/: CMakeLists.txt  LinkerInvocation.cpp  LinkerInvocation.h  LinkerOptions.cpp  LinkerOptions.h  mull-ld.cpp
tools/mull-libtool/: CMakeLists.txt  Options.td  mull-libtool.cpp
tools/mull-xctest/: CMakeLists.txt  XCTestInvocation.cpp  XCTestInvocation.h  mull-xctest.cpp
tools/mull-xctestrun/: CMakeLists.txt  XCTestRunFile.cpp  XCTestRunFile.h  XCTestRunInvocation.cpp  XCTestRunInvocation.h  mull-xctestrun.cpp
unittests/: CMakeLists.txt  MutantSerializationTests.cpp
